<?php
/**
 * Created by PhpStorm.
 * User: Ivan
 * Date: 09.11.2015
 * Time: 17:52
 */

namespace Aot\RussianSyntacsis\Sentence\Member\Role;


class Skazuemoe extends Base
{

}